--- a/dev/stylus/main.styl
+++ b/dev/stylus/main.styl
@@ -1,4 +1,6 @@
 $whiskey = #d2ab66
+$blue_whale = #053054
+
 
 .container--custom
 	width 80% !important
@@ -31,6 +33,8 @@ $whiskey = #d2ab66
 		text-align center
 		font-size 24px
 		display block	
+	.active
+		color $blue_whale
 	span
 	&&--left-line
 		border solid 1px $whiskey
@@ -38,6 +42,9 @@ $whiskey = #d2ab66
 		display inline-block
 		margin-bottom -65px 
 		margin-top 60px
+
+.timeline--content
+	margin-top 80px
 		
 .timeline--big-line
 	border solid 5px $whiskey
