adding vertical line

--- a/dev/stylus/main.styl
+++ b/dev/stylus/main.styl
@@ -52,3 +52,15 @@ $blue_whale = #053054
 	height 10px
 	margin-top 30px
 	
+.vertical-line
+	border-left solid 3px $blue_whale
+	width 10px
+	height 220px
+	float left
+	margin 20px auto
+	
+.year--content-detail
+	margin 60px auto
+	display block
+	color $blue_whale
+	
